# web-app-scanner

./: .gitignore  CHECKLIST-MAPPING.md  LICENSE  PLAN.md  README.md  TOOL-REFERENCE.md  USAGE.md  pyproject.toml
config/: default.yaml
data/: versions.json
templates/: report.html.j2
tests/: test_checklist.py  test_config.py  test_dedup.py  test_diff.py  test_models.py  test_server.py  wordlist.txt
tests/modules/: test_api_routes.py  test_deps.py  test_disclosure.py  test_ffuf.py  test_forms.py  test_genai.py  test_gitleaks.py  test_headers.py  test_nikto.py  test_nuclei.py  test_semgrep.py  test_session.py  test_spider.py  test_sqlmap.py  test_testssl.py  test_trivy.py
webscan/: __init__.py  checklist.py  cli.py  config.py  dedup.py  diff.py  http_log.py  installer.py  models.py  report.py  runner.py  utils.py
webscan/modules/: __init__.py  api_routes.py  base.py  deps.py  disclosure.py  ffuf.py  forms.py  genai.py  gitleaks.py  headers.py  nikto.py  nuclei.py  semgrep.py  session.py  spider.py  sqlmap.py  testssl.py  trivy.py
